Fixed overflow problem with the projects page styling

--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -3,7 +3,6 @@
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    padding: 25px;
 
     .projects {
         display: flex;
@@ -13,10 +12,16 @@
         .project-cards {
             display: flex;
             flex-wrap: wrap;
+            justify-content: space-evenly;
 
             mat-card {
                 width: 350px;
                 margin: 10px;
+                transition: all 300ms;
+                
+                &:hover {
+                    background-color: whitesmoke;
+                }
     
                 a {
                     text-decoration: none;
